gen/Parser.output
Terminals unused in grammar

   REAL
   DIVIDE
   POWER
   CONST
   STRUCT
   NEG


State 32 conflicts: 3 shift/reduce
State 73 conflicts: 7 shift/reduce
State 83 conflicts: 7 shift/reduce
State 84 conflicts: 4 shift/reduce
State 85 conflicts: 4 shift/reduce
State 86 conflicts: 4 shift/reduce
State 87 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce
State 89 conflicts: 7 shift/reduce
State 97 conflicts: 7 shift/reduce
State 98 conflicts: 7 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: /* empty */
    2        | Program IMPORT LPAREN STRING RPAREN
    3        | Program Function

    4 Type: TYPE_INT
    5     | TYPE_STRING
    6     | TYPE_BOOL
    7     | TYPE_VOID

    8 Variable: VARIABLE WORD COLON Type

    9 AutoVariable: AUTO WORD ASSIGN Statement

   10 Variables: Variable
   11          | Variables COMMA Variable

   12 Function: FUNCTION WORD LPAREN Variables RPAREN COLON Type LBRACKET Statements RBRACKET
   13         | FUNCTION WORD LPAREN RPAREN COLON Type LBRACKET Statements RBRACKET

   14 Arguments: Statement
   15          | Arguments COMMA Statement

   16 Statements: /* empty */
   17           | Statements Statement
   18           | Statements RETURN Statement

   19 FunctionCall: WORD LPAREN Arguments RPAREN
   20             | WORD LPAREN RPAREN
   21             | WORD LINK WORD LPAREN Arguments RPAREN
   22             | WORD LINK WORD LPAREN RPAREN

   23 Statement: TRUE
   24          | FALSE
   25          | INT
   26          | STRING
   27          | Variable
   28          | Variable ASSIGN Statement
   29          | AutoVariable
   30          | WORD
   31          | FunctionCall
   32          | IF Statement LBRACKET Statements RBRACKET
   33          | IF Statement LBRACKET Statements RBRACKET ELSE LBRACKET Statements RBRACKET
   34          | Statement PLUS Statement
   35          | Statement MINUS Statement
   36          | Statement TIMES Statement
   37          | FOR Statement END Statement END Statement LBRACKET Statements RBRACKET
   38          | WHILE Statement LBRACKET Statements RBRACKET
   39          | Statement EQUALS Statement
   40          | Statement NOT EQUALS Statement
   41          | Statement GREATER Statement
   42          | Statement LESSER Statement
   43          | LPAREN Statement RPAREN
   44          | WORD ASSIGN Statement
   45          | WORD TWOPLUS
   46          | TWOPLUS WORD
   47          | WORD TWOMINUS
   48          | TWOMINUS WORD


Terminals, with rules where they appear

$end (0) 0
error (256)
WORD (258) 8 9 12 13 19 20 21 22 30 44 45 46 47 48
STRING (259) 2 26
REAL (260)
INT (261) 25
PLUS (262) 34
MINUS (263) 35
TIMES (264) 36
DIVIDE (265)
POWER (266)
EQUALS (267) 39 40
ASSIGN (268) 9 28 44
IF (269) 32 33
ELSE (270) 33
GREATER (271) 41
LESSER (272) 42
FOR (273) 37
TYPE_VOID (274) 7
RETURN (275) 18
WHILE (276) 38
NOT (277) 40
IMPORT (278) 2
LINK (279) 21 22
LPAREN (280) 2 12 13 19 20 21 22 43
RPAREN (281) 2 12 13 19 20 21 22 43
LBRACKET (282) 12 13 32 33 37 38
RBRACKET (283) 12 13 32 33 37 38
COMMA (284) 11 15
TWOMINUS (285) 47 48
TWOPLUS (286) 45 46
TYPE_BOOL (287) 6
TRUE (288) 23
FALSE (289) 24
AUTO (290) 9
FUNCTION (291) 12 13
VARIABLE (292) 8
CONST (293)
STRUCT (294)
TYPE_INT (295) 4
TYPE_STRING (296) 5
COLON (297) 8 12 13
END (298) 37
NEG (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
Program (46)
    on left: 1 2 3, on right: 0 2 3
Type (47)
    on left: 4 5 6 7, on right: 8 12 13
Variable (48)
    on left: 8, on right: 10 11 27 28
AutoVariable (49)
    on left: 9, on right: 29
Variables (50)
    on left: 10 11, on right: 11 12
Function (51)
    on left: 12 13, on right: 3
Arguments (52)
    on left: 14 15, on right: 15 19 21
Statements (53)
    on left: 16 17 18, on right: 12 13 17 18 32 33 37 38
FunctionCall (54)
    on left: 19 20 21 22, on right: 31
Statement (55)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45 46 47 48, on right: 9 14 15 17 18 28 32 33 34 35
    36 37 38 39 40 41 42 43 44


state 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Program)

    Program  go to state 1


state 1

    0 $accept: Program . $end
    2 Program: Program . IMPORT LPAREN STRING RPAREN
    3        | Program . Function

    $end      shift, and go to state 2
    IMPORT    shift, and go to state 3
    FUNCTION  shift, and go to state 4

    Function  go to state 5


state 2

    0 $accept: Program $end .

    $default  accept


state 3

    2 Program: Program IMPORT . LPAREN STRING RPAREN

    LPAREN  shift, and go to state 6


state 4

   12 Function: FUNCTION . WORD LPAREN Variables RPAREN COLON Type LBRACKET Statements RBRACKET
   13         | FUNCTION . WORD LPAREN RPAREN COLON Type LBRACKET Statements RBRACKET

    WORD  shift, and go to state 7


state 5

    3 Program: Program Function .

    $default  reduce using rule 3 (Program)


state 6

    2 Program: Program IMPORT LPAREN . STRING RPAREN

    STRING  shift, and go to state 8


state 7

   12 Function: FUNCTION WORD . LPAREN Variables RPAREN COLON Type LBRACKET Statements RBRACKET
   13         | FUNCTION WORD . LPAREN RPAREN COLON Type LBRACKET Statements RBRACKET

    LPAREN  shift, and go to state 9


state 8

    2 Program: Program IMPORT LPAREN STRING . RPAREN

    RPAREN  shift, and go to state 10


state 9

   12 Function: FUNCTION WORD LPAREN . Variables RPAREN COLON Type LBRACKET Statements RBRACKET
   13         | FUNCTION WORD LPAREN . RPAREN COLON Type LBRACKET Statements RBRACKET

    RPAREN    shift, and go to state 11
    VARIABLE  shift, and go to state 12

    Variable   go to state 13
    Variables  go to state 14


state 10

    2 Program: Program IMPORT LPAREN STRING RPAREN .

    $default  reduce using rule 2 (Program)


state 11

   13 Function: FUNCTION WORD LPAREN RPAREN . COLON Type LBRACKET Statements RBRACKET

    COLON  shift, and go to state 15


state 12

    8 Variable: VARIABLE . WORD COLON Type

    WORD  shift, and go to state 16


state 13

   10 Variables: Variable .

    $default  reduce using rule 10 (Variables)


state 14

   11 Variables: Variables . COMMA Variable
   12 Function: FUNCTION WORD LPAREN Variables . RPAREN COLON Type LBRACKET Statements RBRACKET

    RPAREN  shift, and go to state 17
    COMMA   shift, and go to state 18


state 15

   13 Function: FUNCTION WORD LPAREN RPAREN COLON . Type LBRACKET Statements RBRACKET

    TYPE_VOID    shift, and go to state 19
    TYPE_BOOL    shift, and go to state 20
    TYPE_INT     shift, and go to state 21
    TYPE_STRING  shift, and go to state 22

    Type  go to state 23


state 16

    8 Variable: VARIABLE WORD . COLON Type

    COLON  shift, and go to state 24


state 17

   12 Function: FUNCTION WORD LPAREN Variables RPAREN . COLON Type LBRACKET Statements RBRACKET

    COLON  shift, and go to state 25


state 18

   11 Variables: Variables COMMA . Variable

    VARIABLE  shift, and go to state 12

    Variable  go to state 26


state 19

    7 Type: TYPE_VOID .

    $default  reduce using rule 7 (Type)


state 20

    6 Type: TYPE_BOOL .

    $default  reduce using rule 6 (Type)


state 21

    4 Type: TYPE_INT .

    $default  reduce using rule 4 (Type)


state 22

    5 Type: TYPE_STRING .

    $default  reduce using rule 5 (Type)


state 23

   13 Function: FUNCTION WORD LPAREN RPAREN COLON Type . LBRACKET Statements RBRACKET

    LBRACKET  shift, and go to state 27


state 24

    8 Variable: VARIABLE WORD COLON . Type

    TYPE_VOID    shift, and go to state 19
    TYPE_BOOL    shift, and go to state 20
    TYPE_INT     shift, and go to state 21
    TYPE_STRING  shift, and go to state 22

    Type  go to state 28


state 25

   12 Function: FUNCTION WORD LPAREN Variables RPAREN COLON . Type LBRACKET Statements RBRACKET

    TYPE_VOID    shift, and go to state 19
    TYPE_BOOL    shift, and go to state 20
    TYPE_INT     shift, and go to state 21
    TYPE_STRING  shift, and go to state 22

    Type  go to state 29


state 26

   11 Variables: Variables COMMA Variable .

    $default  reduce using rule 11 (Variables)


state 27

   13 Function: FUNCTION WORD LPAREN RPAREN COLON Type LBRACKET . Statements RBRACKET

    $default  reduce using rule 16 (Statements)

    Statements  go to state 30


state 28

    8 Variable: VARIABLE WORD COLON Type .

    $default  reduce using rule 8 (Variable)


state 29

   12 Function: FUNCTION WORD LPAREN Variables RPAREN COLON Type . LBRACKET Statements RBRACKET

    LBRACKET  shift, and go to state 31


state 30

   13 Function: FUNCTION WORD LPAREN RPAREN COLON Type LBRACKET Statements . RBRACKET
   17 Statements: Statements . Statement
   18           | Statements . RETURN Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    RETURN    shift, and go to state 37
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    RBRACKET  shift, and go to state 40
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 49


state 31

   12 Function: FUNCTION WORD LPAREN Variables RPAREN COLON Type LBRACKET . Statements RBRACKET

    $default  reduce using rule 16 (Statements)

    Statements  go to state 50


state 32

   19 FunctionCall: WORD . LPAREN Arguments RPAREN
   20             | WORD . LPAREN RPAREN
   21             | WORD . LINK WORD LPAREN Arguments RPAREN
   22             | WORD . LINK WORD LPAREN RPAREN
   30 Statement: WORD .
   44          | WORD . ASSIGN Statement
   45          | WORD . TWOPLUS
   47          | WORD . TWOMINUS

    ASSIGN    shift, and go to state 51
    LINK      shift, and go to state 52
    LPAREN    shift, and go to state 53
    TWOMINUS  shift, and go to state 54
    TWOPLUS   shift, and go to state 55

    LPAREN    [reduce using rule 30 (Statement)]
    TWOMINUS  [reduce using rule 30 (Statement)]
    TWOPLUS   [reduce using rule 30 (Statement)]
    $default  reduce using rule 30 (Statement)


state 33

   26 Statement: STRING .

    $default  reduce using rule 26 (Statement)


state 34

   25 Statement: INT .

    $default  reduce using rule 25 (Statement)


state 35

   32 Statement: IF . Statement LBRACKET Statements RBRACKET
   33          | IF . Statement LBRACKET Statements RBRACKET ELSE LBRACKET Statements RBRACKET

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 56


state 36

   37 Statement: FOR . Statement END Statement END Statement LBRACKET Statements RBRACKET

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 57


state 37

   18 Statements: Statements RETURN . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 58


state 38

   38 Statement: WHILE . Statement LBRACKET Statements RBRACKET

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 59


state 39

   43 Statement: LPAREN . Statement RPAREN

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 60


state 40

   13 Function: FUNCTION WORD LPAREN RPAREN COLON Type LBRACKET Statements RBRACKET .

    $default  reduce using rule 13 (Function)


state 41

   48 Statement: TWOMINUS . WORD

    WORD  shift, and go to state 61


state 42

   46 Statement: TWOPLUS . WORD

    WORD  shift, and go to state 62


state 43

   23 Statement: TRUE .

    $default  reduce using rule 23 (Statement)


state 44

   24 Statement: FALSE .

    $default  reduce using rule 24 (Statement)


state 45

    9 AutoVariable: AUTO . WORD ASSIGN Statement

    WORD  shift, and go to state 63


state 46

   27 Statement: Variable .
   28          | Variable . ASSIGN Statement

    ASSIGN  shift, and go to state 64

    $default  reduce using rule 27 (Statement)


state 47

   29 Statement: AutoVariable .

    $default  reduce using rule 29 (Statement)


state 48

   31 Statement: FunctionCall .

    $default  reduce using rule 31 (Statement)


state 49

   17 Statements: Statements Statement .
   34 Statement: Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    PLUS     shift, and go to state 65
    MINUS    shift, and go to state 66
    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71

    $default  reduce using rule 17 (Statements)


state 50

   12 Function: FUNCTION WORD LPAREN Variables RPAREN COLON Type LBRACKET Statements . RBRACKET
   17 Statements: Statements . Statement
   18           | Statements . RETURN Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    RETURN    shift, and go to state 37
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    RBRACKET  shift, and go to state 72
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 49


state 51

   44 Statement: WORD ASSIGN . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 73


state 52

   21 FunctionCall: WORD LINK . WORD LPAREN Arguments RPAREN
   22             | WORD LINK . WORD LPAREN RPAREN

    WORD  shift, and go to state 74


state 53

   19 FunctionCall: WORD LPAREN . Arguments RPAREN
   20             | WORD LPAREN . RPAREN

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    RPAREN    shift, and go to state 75
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    Arguments     go to state 76
    FunctionCall  go to state 48
    Statement     go to state 77


state 54

   47 Statement: WORD TWOMINUS .

    $default  reduce using rule 47 (Statement)


state 55

   45 Statement: WORD TWOPLUS .

    $default  reduce using rule 45 (Statement)


state 56

   32 Statement: IF Statement . LBRACKET Statements RBRACKET
   33          | IF Statement . LBRACKET Statements RBRACKET ELSE LBRACKET Statements RBRACKET
   34          | Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    PLUS      shift, and go to state 65
    MINUS     shift, and go to state 66
    TIMES     shift, and go to state 67
    EQUALS    shift, and go to state 68
    GREATER   shift, and go to state 69
    LESSER    shift, and go to state 70
    NOT       shift, and go to state 71
    LBRACKET  shift, and go to state 78


state 57

   34 Statement: Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   37          | FOR Statement . END Statement END Statement LBRACKET Statements RBRACKET
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    PLUS     shift, and go to state 65
    MINUS    shift, and go to state 66
    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71
    END      shift, and go to state 79


state 58

   18 Statements: Statements RETURN Statement .
   34 Statement: Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    PLUS     shift, and go to state 65
    MINUS    shift, and go to state 66
    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71

    $default  reduce using rule 18 (Statements)


state 59

   34 Statement: Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   38          | WHILE Statement . LBRACKET Statements RBRACKET
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    PLUS      shift, and go to state 65
    MINUS     shift, and go to state 66
    TIMES     shift, and go to state 67
    EQUALS    shift, and go to state 68
    GREATER   shift, and go to state 69
    LESSER    shift, and go to state 70
    NOT       shift, and go to state 71
    LBRACKET  shift, and go to state 80


state 60

   34 Statement: Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement
   43          | LPAREN Statement . RPAREN

    PLUS     shift, and go to state 65
    MINUS    shift, and go to state 66
    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71
    RPAREN   shift, and go to state 81


state 61

   48 Statement: TWOMINUS WORD .

    $default  reduce using rule 48 (Statement)


state 62

   46 Statement: TWOPLUS WORD .

    $default  reduce using rule 46 (Statement)


state 63

    9 AutoVariable: AUTO WORD . ASSIGN Statement

    ASSIGN  shift, and go to state 82


state 64

   28 Statement: Variable ASSIGN . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 83


state 65

   34 Statement: Statement PLUS . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 84


state 66

   35 Statement: Statement MINUS . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 85


state 67

   36 Statement: Statement TIMES . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 86


state 68

   39 Statement: Statement EQUALS . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 87


state 69

   41 Statement: Statement GREATER . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 88


state 70

   42 Statement: Statement LESSER . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 89


state 71

   40 Statement: Statement NOT . EQUALS Statement

    EQUALS  shift, and go to state 90


state 72

   12 Function: FUNCTION WORD LPAREN Variables RPAREN COLON Type LBRACKET Statements RBRACKET .

    $default  reduce using rule 12 (Function)


state 73

   34 Statement: Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement
   44          | WORD ASSIGN Statement .

    PLUS     shift, and go to state 65
    MINUS    shift, and go to state 66
    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71

    PLUS      [reduce using rule 44 (Statement)]
    MINUS     [reduce using rule 44 (Statement)]
    TIMES     [reduce using rule 44 (Statement)]
    EQUALS    [reduce using rule 44 (Statement)]
    GREATER   [reduce using rule 44 (Statement)]
    LESSER    [reduce using rule 44 (Statement)]
    NOT       [reduce using rule 44 (Statement)]
    $default  reduce using rule 44 (Statement)


state 74

   21 FunctionCall: WORD LINK WORD . LPAREN Arguments RPAREN
   22             | WORD LINK WORD . LPAREN RPAREN

    LPAREN  shift, and go to state 91


state 75

   20 FunctionCall: WORD LPAREN RPAREN .

    $default  reduce using rule 20 (FunctionCall)


state 76

   15 Arguments: Arguments . COMMA Statement
   19 FunctionCall: WORD LPAREN Arguments . RPAREN

    RPAREN  shift, and go to state 92
    COMMA   shift, and go to state 93


state 77

   14 Arguments: Statement .
   34 Statement: Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    PLUS     shift, and go to state 65
    MINUS    shift, and go to state 66
    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71

    $default  reduce using rule 14 (Arguments)


state 78

   32 Statement: IF Statement LBRACKET . Statements RBRACKET
   33          | IF Statement LBRACKET . Statements RBRACKET ELSE LBRACKET Statements RBRACKET

    $default  reduce using rule 16 (Statements)

    Statements  go to state 94


state 79

   37 Statement: FOR Statement END . Statement END Statement LBRACKET Statements RBRACKET

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 95


state 80

   38 Statement: WHILE Statement LBRACKET . Statements RBRACKET

    $default  reduce using rule 16 (Statements)

    Statements  go to state 96


state 81

   43 Statement: LPAREN Statement RPAREN .

    $default  reduce using rule 43 (Statement)


state 82

    9 AutoVariable: AUTO WORD ASSIGN . Statement

    WORD      shift, and go to state 32
    STRING    shift, and go to state 33
    INT       shift, and go to state 34
    IF        shift, and go to state 35
    FOR       shift, and go to state 36
    WHILE     shift, and go to state 38
    LPAREN    shift, and go to state 39
    TWOMINUS  shift, and go to state 41
    TWOPLUS   shift, and go to state 42
    TRUE      shift, and go to state 43
    FALSE     shift, and go to state 44
    AUTO      shift, and go to state 45
    VARIABLE  shift, and go to state 12

    Variable      go to state 46
    AutoVariable  go to state 47
    FunctionCall  go to state 48
    Statement     go to state 97


state 83

   28 Statement: Variable ASSIGN Statement .
   34          | Statement . PLUS Statement
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    PLUS     shift, and go to state 65
    MINUS    shift, and go to state 66
    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71

    PLUS      [reduce using rule 28 (Statement)]
    MINUS     [reduce using rule 28 (Statement)]
    TIMES     [reduce using rule 28 (Statement)]
    EQUALS    [reduce using rule 28 (Statement)]
    GREATER   [reduce using rule 28 (Statement)]
    LESSER    [reduce using rule 28 (Statement)]
    NOT       [reduce using rule 28 (Statement)]
    $default  reduce using rule 28 (Statement)


state 84

   34 Statement: Statement . PLUS Statement
   34          | Statement PLUS Statement .
   35          | Statement . MINUS Statement
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71

    EQUALS    [reduce using rule 34 (Statement)]
    GREATER   [reduce using rule 34 (Statement)]
    LESSER    [reduce using rule 34 (Statement)]
    NOT       [reduce using rule 34 (Statement)]
    $default  reduce using rule 34 (Statement)


state 85

   34 Statement: Statement . PLUS Statement
   35          | Statement . MINUS Statement
   35          | Statement MINUS Statement .
   36          | Statement . TIMES Statement
   39          | Statement . EQUALS Statement
   40          | Statement . NOT EQUALS Statement
   41          | Statement . GREATER Statement
   42          | Statement . LESSER Statement

    TIMES    shift, and go to state 67
    EQUALS   shift, and go to state 68
    GREATER  shift, and go to state 69
    LESSER   shift, and go to state 70
    NOT      shift, and go to state 71
